Fixed tabs and content spacing.

--- a/src/App.scss
+++ b/src/App.scss
@@ -70,3 +70,7 @@ ul.navigation-secondary {
     margin-top: 0 !important
   }
 }
+
+.bg-white {
+  background-color: white;
+}
