--- a/src/SmartComponents/AppTabs/apptabs.scss
+++ b/src/SmartComponents/AppTabs/apptabs.scss
@@ -2,8 +2,5 @@
 @import '~@red-hat-insights/insights-frontend-components/Utilities/_all';
 
 .ins-tabs {
-  padding-left: 12px;
-  padding-right: 12px;
-  margin-bottom: 12px;
   background-color: white;
 }
